--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "id": "fbdfd8d1-a952-4adb-b0f7-f64c681c649d",
-  "name": "PDF Viewer V2",
-  "publisher": "Volodymyr Dvernytskyi",
+  "id": "9cae2ca9-fa34-4a46-89c7-5a6bf25b91d4",
+  "name": "PDF Viewer V2 - Lite Fork",
+  "publisher": "Pino Pharmazeutische Präparate GmbH",
   "version": "1.0.0.3",
   "brief": "https://vld-nav.com/",
   "description": "https://vld-nav.com/",
@@ -13,7 +13,7 @@
   "dependencies": [],
   "screenshots": [],
   "platform": "21.0.0.0",
-  "application": "21.0.0.0",
+  "application": "23.0.0.0",
   "idRanges": [
     {
       "from": 81751,
@@ -21,7 +21,7 @@
     }
   ],
   "contextSensitiveHelpUrl": "https://vld-nav.com/",
-  "runtime": "10.0",
+  "runtime": "12.1",
   "features": ["TranslationFile"],
   "resourceExposurePolicy":
   {
